[package]
name = "jsonld-signer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ed25519-dalek = "2.1.1"
rand = "0.8.5"
base64 = "0.22.1"
chrono = "0.4"
once_cell = "1.21.3"
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
