[package]
name = "signer"
version = "0.1.0"
edition = "2024"


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ed25519-dalek = "2.1.1"
rand = "0.8.5"
base64 = "0.22.1"
chrono = "0.4"
once_cell = "1.21.3"
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "8.0.5", features = ["axum"] }
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
flexi_logger = "0.31.1"
tracing-log = "0.2"


[dev-dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.140"
axum = "0.8.4"
